--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 </head>
 <body>
 <h1>Naudas spēlītes</h1>
+<div class="wrapper">
 
 
+<table>
+    <thead>
+<tr>
+<td>Nr.</td>
+<td>Vārds</td>
+<td>Balva</td>
 
+</tr>
+</thead>
+</table>
+</div>
 
 
 
