--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
 
 <head>
 
-<title>Virsraksts</title>
-<link href="style.css" rel="stylesheet" />
+    <title>Virsraksts</title>
+    <link href="style.css" rel="stylesheet" />
 
 
 
 </head>
+
 <body>
-<h1>Naudas spēlītes</h1>
-<div class="wrapper">
+    <h1>Naudas spēlītes</h1>
+    <div class="wrapper"></div>
 
 
-<table>
-    <thead>
-<tr>
-<td>Nr.</td>
-<td>Vārds</td>
-<td>Balva</td>
+    <table>
+        <thead>
+            <tr>
+                <td>Nr.</td>
+                <td>Vārds</td>
+                <td>Balva</td>
 
-</tr>
-</thead>
-</table>
-</div>
+            </tr>
+        <tbody class="rindas">
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
 
 
 
 
+
+        </tbody>
+        </thead>
+
+    </table>
     <script scr="script.js"></script>
 
 
@@ -38,4 +47,5 @@
 
 
 </body>
+
 </html>
