--- a/index.html
+++ b/index.html
@@ -13,33 +13,31 @@
 
 <body>
     <h1>Naudas spēlītes</h1>
-    <div class="wrapper"></div>
+    <div class="wrapper">
 
 
-    <table>
-        <thead>
-            <tr>
-                <td>Nr.</td>
-                <td>Vārds</td>
-                <td>Balva</td>
+        <table>
+            <thead>
+                <tr>
+                    <td>Nr.</td>
+                    <td>Vārds</td>
+                    <td>Balva</td>
 
-            </tr>
-        <tbody class="rindas">
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+                </tr>
+            </thead>
+            <tbody class="rindas">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+            </tbody>
 
 
-
-
-
-        </tbody>
-        </thead>
-
-    </table>
-    <script scr="script.js"></script>
+        </table>
+    </div>
+    <script src="script.js"></script>
 
 
 
